--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-dom": "17.0.2"
 	},
 	"devDependencies": {
+		"@svgr/webpack": "^5.5.0",
 		"@types/node": "^14.14.37",
 		"@types/react": "^17.0.3",
 		"@typescript-eslint/eslint-plugin": "^4.20.0",
