--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"classnames": "^2.3.2",
+		"date-fns": "^2.30.0",
 		"next": "10.1.3",
 		"react": "17.0.2",
 		"react-dom": "17.0.2"
